--- a/www/index.html
+++ b/www/index.html
@@ -6,19 +6,47 @@
 <style>
 #drawing{
 	border:1px solid lightgray;
+}
+/*.drawLoc{
 	position: fixed;
 	top: 100;
 	left: 100;
-}
+}*/
 .rawImg{
 	position: fixed;
 	top: 120;
 	left: 150;
 }
+body {
+    background: #fafafa;
+}
+svg {
+    /*troke: none;
+    fill: none;
+    display: none;*/
+    position: absolute;
+    /*position: fixed;*/
+    top: 100;
+	left: 50;
+}
+canvas{
+    position: fixed;
+    /*display: block;*/
+    /*margin: -100px -100px;*/
+    top: 100;
+	left: 50;
+}
 </style>
 <div id="menu"></div><br>
 <img class="rawImg" width="418" height="418" src="tgrpc.png">
-<canvas id="drawing" width="900" height="500">你的浏览器不支持Canvas！</canvas>
+<svg id="svg" width="900" height="500" viewBox="0 0 900 500">
+    <!-- <path id="circle-path" d="M10,100a90,90 0 1,0 180,0a90,90 0 1,0 -180,0" /> -->
+    <!-- <path id="rect-path" d="M90,10 110,10 110,190 90,190 90,10" /> -->
+    <path id="bezier-path" d="M4 3 C860 498, 913 498, 898 249M898 249 C912 1, 859 1, 3 498" stroke="green" stroke-width="4" fill="none" />
+
+    <!-- <path id="triangle-path" d="M100,40 170,160 30,160 100,40" /> -->
+</svg>
+<canvas id="drawing" class="drawLoc" width="900" height="500">你的浏览器不支持Canvas！</canvas>
 <script>
 	/*
 	绘制图片
@@ -32,6 +60,7 @@
 	var imgs = new Image();
 	imgs.src = "tgrpc.png";
 	console.log(imgs.width,imgs.height);
+	var svg =  document.getElementById("svg")
 	// //方法一：存在部分不兼容
 	// imgs.onload = drawImg;//图片加载完成再执行
 	// function drawImg(){
@@ -46,6 +75,24 @@
 	// 	cxt.fillStyle = bg;
 	// 	cxt.fillRect(0,0,drawing.width,drawing.height);
 	// }
+
+// window.onload = function () {
+// 	var ctx = document.getElementById("drawing").getContext('2d');
+// 	//https://developer.mozilla.org/en-US/docs/XMLSerializer
+// 	var svg_xml = (new XMLSerializer()).serializeToString(svg);
+// 	var img = new Image();
+// 	//https://developer.mozilla.org/en-US/docs/DOM/window.btoa
+// 	console.log(window.btoa(svg_xml));
+// 	img.src = "data:image/svg+xml;base64," + window.btoa(svg_xml);
+
+// 	//也可以直接写
+// 	//img.src = "data:image/svg+xml;base64," + window.btoa(document.getElementById("td1").innerHTML);
+
+// 	img.onload = function () {
+// 	    //drawImage 可以用HTMLImageElement，HTMLCanvasElement或者HTMLVideoElement作为参数
+// 	    ctx.drawImage(img, 0, 0);
+// 	};
+// }
 
 </script>
 <script src="dom.js"></script>
