--- a/www/index.html
+++ b/www/index.html
@@ -38,7 +38,7 @@ canvas{
 }
 </style>
 <div id="menu"></div><br>
-<img class="rawImg" width="418" height="418" src="tgrpc.png">
+<!-- <img class="rawImg" width="418" height="418" src="tgrpc.png"> -->
 <svg id="svg" width="900" height="500" viewBox="0 0 900 500">
     <!-- <path id="circle-path" d="M10,100a90,90 0 1,0 180,0a90,90 0 1,0 -180,0" /> -->
     <!-- <path id="rect-path" d="M90,10 110,10 110,190 90,190 90,10" /> -->
