--- a/www/index.html
+++ b/www/index.html
@@ -38,13 +38,9 @@ canvas{
 }
 </style>
 <div id="menu"></div><br>
-<!-- <img class="rawImg" width="418" height="418" src="tgrpc.png"> -->
+<img class="rawImg" width="418" height="418" src="tgrpc.png">
 <svg id="svg" width="900" height="500" viewBox="0 0 900 500">
-    <!-- <path id="circle-path" d="M10,100a90,90 0 1,0 180,0a90,90 0 1,0 -180,0" /> -->
-    <!-- <path id="rect-path" d="M90,10 110,10 110,190 90,190 90,10" /> -->
-    <path id="bezier-path" d="M4 3 C860 498, 913 498, 898 249M898 249 C912 1, 859 1, 3 498" stroke="green" stroke-width="4" fill="none" />
-
-    <!-- <path id="triangle-path" d="M100,40 170,160 30,160 100,40" /> -->
+    <path id="bezier-path" d="" stroke="green" stroke-width="4" fill="none" />
 </svg>
 <canvas id="drawing" class="drawLoc" width="900" height="500">你的浏览器不支持Canvas！</canvas>
 <script>
@@ -100,6 +96,7 @@ canvas{
 <script src="creator/path.js?v=7"></script>
 <script src="creator/freepath.js?v=7"></script>
 <script src="creator/rect.js?v=7"></script>
+<script src="accel/select.js"></script>
 <script src="accel/menu.js"></script>
 </body>
 </html>
