--- a/www/index.html
+++ b/www/index.html
@@ -38,7 +38,7 @@ canvas{
 }
 </style>
 <div id="menu"></div><br>
-<img class="rawImg" width="418" height="418" src="tgrpc.png">
+<!-- <img class="rawImg" width="418" height="418" src="tgrpc.png"> -->
 <svg id="svg" width="900" height="500" viewBox="0 0 900 500">
     <path id="bezier-path" d="" stroke="green" stroke-width="4" fill="none" />
 </svg>
@@ -57,6 +57,7 @@ canvas{
 	imgs.src = "tgrpc.png";
 	console.log(imgs.width,imgs.height);
 	var svg =  document.getElementById("svg")
+    
 	// //方法一：存在部分不兼容
 	// imgs.onload = drawImg;//图片加载完成再执行
 	// function drawImg(){
